  that font could be wrongly used for following characters even if they
  could be displayed with the main font. (the problem was reported by
  Max Funk as SF.net patch #3488967 - Kazutoshi Satoda)

- Made basic edit operations aware of characters above BMP and combining
  character sequences.
  (SF.net bug #3040720 - Kazutoshi Satoda)

}}}
{{{ API Changes

- New jEdit.getCurrentLanguage() method that returns the language used  by jEdit.
  (Matthieu Casanova)

- New method JEditBuffer.insert(int offset, CharSequence seq) to insert
  text in a buffer. (Matthieu Casanova)

- New constructors for CopyFileWorker:
  CopyFileWorker(Component comp, VFSFile[] vfsFiles, String target)
  CopyFileWorker(Component comp, VFSFile[] vfsFiles, String target,
  			Behavior behavior)
  CopyFileWorker(Component comp, File[] files, String target)
  CopyFileWorker(Component comp, File[] files, String target, Behavior behavior)
  to allow copy of multiple files at the same time (Matthieu Casanova)

- New VFS.copy() methods:
  copy(ProgressObserver progress, VFS sourceVFS, Object sourceSession,
  	String sourcePath, VFS targetVFS, Object targetSession,
  	String targetPath, Component comp, boolean canStop,
  	boolean sendVFSUpdate)
  copy(ProgressObserver progress, String sourcePath,String targetPath,
  	Component comp, boolean canStop, boolean sendVFSUpdate)
  (Matthieu Casanova)

- New methods MiscUtilities.getCompleteBaseName() to return 
  the (complete) base names of a file (until the last .) and
  and getBaseName(), to replace the badly named getFileNameNoExtension,
  which is now deprecated (Matthieu Casanova, Alan Ezust)

- TextUtilities.join() now accept Collection<?> instead of Collection<String>
  (Matthieu Casanova)

- OperatingSystem.isOS2() method is removed since OS/2 cannot run jEdit since
  many years (Matthieu Casanova)

- OperatingSystem.isDOSDerived() is now deprecated since OS/2 do not exists